--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,8 @@
     <string name="_0">0</string>
     <string name="_0mhz">0MHZ</string>
 
+    <string name="version_name">版本号：</string>
+
+
 
 </resources>
